# Multithreaded-Client-server-application

./: CMakeLists.txt  README.md
include/: hfa.h
src/: client.cpp  server.cpp
